--- a/package.json
+++ b/package.json
@@ -18,12 +18,14 @@
     "next": "13.0.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-fast-marquee": "^1.3.5",
     "react-hot-toast": "^2.4.0",
     "typescript": "4.9.3"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.19",
-    "tailwindcss": "^3.2.4"
+    "tailwindcss": "^3.2.4",
+    "tw-utils": "^2.4.0"
   }
 }
