--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "clsx": "^1.2.1",
     "eslint": "8.28.0",
     "eslint-config-next": "13.0.5",
+    "framer-motion": "^7.6.15",
     "next": "13.0.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
