--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "eslint-config-next": "13.0.5",
     "framer-motion": "^7.6.15",
     "next": "13.0.5",
+    "next-seo": "^5.14.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-fast-marquee": "^1.3.5",
