--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "typescript": "4.9.3"
   },
   "devDependencies": {
+    "@builder.io/partytown": "^0.7.2",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.19",
     "tailwindcss": "^3.2.4",
